# Testing-Different-Models-for-Stock-Prediction

./: README.md  Stock_Prediction.ipynb  Stock_Prediction_Diff_Parameters.ipynb
Testing Different Models/: README.md
cpp_server/: CMakeLists.txt  main.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
ingest_train/: fetch_and_save.py  train_export.py
